[gd_scene load_steps=4 format=3 uid="uid://cw45j0ba3l2f0"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_ikam2"]
[ext_resource type="Texture2D" uid="uid://dilhbvjivbvnd" path="res://Assets/Sprite-0002.png" id="2_dq4cs"]
[ext_resource type="Texture2D" uid="uid://7kgaeyuj6u1r" path="res://Assets/menu_bird.png" id="2_rd1mi"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
script = ExtResource("1_ikam2")

[node name="Main_Menu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Main_Menu"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.269152, 0.482143, 0.817963, 1)

[node name="Label" type="Label" parent="Main_Menu/ColorRect"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 284.0
theme_override_font_sizes/font_size = 85
text = "Game Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite-0002" type="Sprite2D" parent="Main_Menu"]
texture_filter = 1
position = Vector2(309, 427)
scale = Vector2(4.65625, 4.65625)
texture = ExtResource("2_dq4cs")

[node name="MenuBird" type="Sprite2D" parent="Main_Menu"]
texture_filter = 1
position = Vector2(398, 570)
rotation = 0.0434077
scale = Vector2(1.51787, 1.51786)
texture = ExtResource("2_rd1mi")

[node name="Start Game" type="Button" parent="Main_Menu"]
layout_mode = 0
offset_left = 128.0
offset_top = 1081.0
offset_right = 592.0
offset_bottom = 1209.0
theme_override_font_sizes/font_size = 60
text = "Start Game"
icon_alignment = 1

[node name="Credits" type="Button" parent="Main_Menu"]
layout_mode = 0
offset_left = 128.0
offset_top = 882.0
offset_right = 592.0
offset_bottom = 1010.0
theme_override_font_sizes/font_size = 60
text = "Credits
"
icon_alignment = 1

[node name="Credits_Menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Credits_Menu"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.270588, 0.482353, 0.819608, 1)

[node name="Label" type="Label" parent="Credits_Menu/ColorRect"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1024.0
theme_override_font_sizes/font_size = 40
text = "I wanted to create a game that did not need the player to choose violence to progress but instead show's you that peace is always an option!

Game and Assets created by:
Naoise Ryan

Linkedin: 
naoiseryan

Email:
 naoiseryan20@gmail.com
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Go Back" type="Button" parent="Credits_Menu"]
layout_mode = 0
offset_left = 128.0
offset_top = 1081.0
offset_right = 592.0
offset_bottom = 1209.0
theme_override_font_sizes/font_size = 60
text = "Back"
icon_alignment = 1

[connection signal="button_up" from="Main_Menu/Start Game" to="." method="_on_start_game_button_up"]
[connection signal="button_up" from="Main_Menu/Credits" to="." method="_on_credits_button_up"]
[connection signal="button_up" from="Credits_Menu/Go Back" to="." method="_on_go_back_button_up"]
